--- a/site/public/index.html
+++ b/site/public/index.html
@@ -77,16 +77,16 @@
                     <div class="row">
                         <div class="col-md-7">
                             <div class="description">
-                                <h2>Aqui vai ir um Titulo...</h2>
+                                <h2>Cérberus</h2>
                                 <br>
-                                <h5>Aqui vem uma breve descrição</h5>
+                                <h5>O modo mais seguro de cuidar do seu negócio</h5>
                             </div>
-                            <!--Icone do windowns-->
+                            <!-- Icone do windowns
                             <div class="buttons">
                                 <button class="btn btn-simple btn-neutral">
                                   Windows  <i class="fa fa-windows"></i>
                                 </button>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="col-md-5  hidden-xs">
                             <div class="parallax-image">
@@ -98,9 +98,9 @@
             </div>
             <div class="section section-gray section-clients">
                 <div class="container text-center">
-                    <h4 class="header-text">Aqui inserir um titulo...</h4>
+                    <h4 class="header-text">Parceiros comerciais</h4>
                     <p>
-                        Aqui inserir um texto<br>
+                        Juntamos a melhor equipe para atendê-los<br>
                     </p>
                     <!-- Ex: Lojas Parceiras-->
                     <div class="logos">
@@ -120,9 +120,13 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="description">
-                                <h4 class="header-text">Aqui inserir um titulo....</h4>
-                                <p>Aqui uma descrição....</p>
-                                <p>Aqui uma descrição....</p>
+                                <h4 class="header-text">Somos mais do que um NOC</h4>
+                                <p>Nossos serviços incluem manutenção preventiva, pró-ativa e 
+                                    atuações em estado crítico.
+                                </p>
+                                <p>Além disso, você pode acessar informações do seu computador pelo telefone
+                                    em qualquer lugar e qualquer horário.
+                                </p>
                             </div>
                         </div>
                         <!--Imagem de ilustração-->
@@ -157,18 +161,18 @@
                             </div>
                         </div>
                         <div class="col-md-5 col-md-offset-1">
-                            <h4 class="header-text">Inserir um titulo</h4>
+                            <h4 class="header-text">Faça seu orçamento</h4>
                             <p>
-                               Inserir uma descrição.....
+                               Clique abaixo e fale com um de nossos gerentes comerciais
                             </p>
-                            <a href="http://www.creative-tim.com/product/awesome-landing-page" id="Demo1" class="btn btn-warning btn-fill" data-button="warning">Registra-se</a>
+                            <a href="http://www.creative-tim.com/product/awesome-landing-page" id="Demo1" class="btn btn-warning btn-fill" data-button="warning">Fazer Orçamento</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="section section-features">
                 <div class="container">
-                    <h4 class="header-text text-center">Nossos Produtos</h4>
+                    <h4 class="header-text text-center">Nossos Serviços</h4>
                     <div class="row">
                         <div class="col-md-4">
                             <div class="card card-orange">
@@ -176,8 +180,8 @@
                                     <i class="pe-7s-graph2"></i>
                                 </div>
                                 <div class="text">
-                                    <h4>Aqui vem um titulo</h4>
-                                    <p>Aqui vai uma descrição</p>
+                                    <h4>Análise e Relatórios</h4>
+                                    <p>Fazemos a filtragem de dados para impulsionar o seu negócio</p>
                                 </div>
                             </div>
                         </div>
@@ -186,8 +190,8 @@
                                 <div class="icon">
                                     <i class="pe-7s-bell"></i>
                                 </div>
-                                <h4>Aqui vem um titulo</h4>
-                                <p>Aqui vai uma descrição</p>
+                                <h4>Alertas e Notificações</h4>
+                                <p>Fazemos uma análise pró-ativa para ajudar no planejamento de seus recursos   </p>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -195,8 +199,8 @@
                                 <div class="icon">
                                     <i class="pe-7s-monitor"></i>
                                 </div>
-                                <h4>Aqui vem um titulo</h4>
-                                <p>Aqui vai uma descrição</p>
+                                <h4>Monitoramento</h4>
+                                <p>Você despreocupado com o andamento de seus recursos</p>
                             </div>
                         </div>
                     </div>
@@ -204,7 +208,7 @@
             </div>
             <div class="section section-testimonial">
                 <div class="container">
-                    <h4 class="header-text text-center">Aqui vem um titulo</h4>
+                    <h4 class="header-text text-center">Opniões dos clientes</h4>
                     <div id="carousel-example-generic" class="carousel fade" data-ride="carousel">
                         <!-- Slides do feedback -->
                         <div class="carousel-inner" role="listbox">
@@ -213,8 +217,8 @@
                                     <img src="config/img/faces/face-4.jpg">
                                 </div>
                                 <div class="carousel-testimonial-caption">
-                                    <p>Aqui vai uma descrição</p>
-                                    <h3>"Uma frase como comentarios"</h3>
+                                    <p>Pedro Cardoso</p>
+                                    <h3>"A melhor empresa da área!"</h3>
                                 </div>
                             </div>
                             <div class="item active">
@@ -222,8 +226,8 @@
                                     <img src="config/img/faces/face-3.jpg">
                                 </div>
                                 <div class="carousel-testimonial-caption">
-                                    <p>Nome do cliente</p>
-                                    <h3>"Frase"</h3>
+                                    <p>Marcos Antônio</p>
+                                    <h3>"Ótimo serviço!"</h3>
                                 </div>
                             </div>
                             <div class="item">
@@ -231,8 +235,8 @@
                                     <img src="config/img/faces/face-2.jpg">
                                 </div>
                                 <div class="carousel-testimonial-caption">
-                                    <p>Nome do cliente</p>
-                                    <h3>"Frase"</h3>
+                                    <p>André Luiz  </p>
+                                    <h3>"A manutenção ajudou muito!"</h3>
                                 </div>
                             </div>
                         </div>
