--- a/noc/public/index.html
+++ b/noc/public/index.html
@@ -43,7 +43,7 @@
                             </fieldset>
                             <div class="forms_buttons">
                                 <button type="button" class="forms_buttons-forgot">Esqueceu a senha?</button>
-                                <input type="submit" onclick="entrar()" value="Logar" class="forms_buttons-action bg-primary">
+                                <button type="button" class="forms_buttons-action bg-primary" onclick="entrar()">Entrar</button>
                             </div>
                         </form>
                     </div>
