Arrumando bugs da pagina do map, alinhando os cards das paginas maquina e user

--- a/noc/public/site/maquina.html
+++ b/noc/public/site/maquina.html
@@ -121,10 +121,10 @@
       </div>
       <div class="content">
         <div class="row">
-          <div class="col-md-8" >
+          <div class="col-md-12" >
             <div class="card">
               <div class="card-header">
-                <h5 class="title">Cadastre uma nova Máquina!</h5>
+                <h5 class="title text-center">Cadastre uma nova Máquina!</h5>
               </div>
               <div class="card-body">
                 <form>
