--- a/noc/public/site/user.html
+++ b/noc/public/site/user.html
@@ -120,10 +120,10 @@
       </div>
       <div class="content">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-12">
             <div class="card">
               <div class="card-header">
-                <h5 class="title">Cadastre um novo Cliente!</h5>
+                <h5 class="title text-center">Cadastre um novo Cliente!</h5>
               </div>
               <div class="card-body">
                 <form>
