--- a/noc/public/site/user.html
+++ b/noc/public/site/user.html
@@ -131,13 +131,13 @@
                     <div class="col-md-5 pr-1">
                       <div class="form-group">
                         <label>Nome da Empresa:</label>
-                        <input type="text" class="form-control"placeholder="Nome da Empresa:" >
+                        <input type="text" id="nomeEmpresa" class="form-control"placeholder="Nome da Empresa:" >
                       </div>
                     </div>
                     <div class="col-md-5 pr-1">
                       <div class="form-group">
                         <label>CNPJ:</label>
-                        <input type="text" class="form-control"  placeholder="CNPJ">
+                        <input type="text" id="cnpj" class="form-control"  placeholder="CNPJ">
                       </div>
                     </div>
                   </div>
@@ -147,13 +147,13 @@
                     <div class="col-md-6 pr-1">
                       <div class="form-group">
                         <label>Rua:</label>
-                        <input type="text" class="form-control" placeholder="Rua" >
+                        <input type="text" id="rua" class="form-control" placeholder="Rua" >
                       </div>
                     </div>
                     <div class="col-md-4 pr-1">
                       <div class="form-group">
                         <label>Número:</label>
-                        <input type="text" class="form-control" placeholder="Número" >
+                        <input type="text" name="rua" class="form-control" placeholder="Número" >
                       </div>
                     </div>
                   </div>
@@ -161,13 +161,13 @@
                     <div class="col-md-4 pr-1">
                       <div class="form-group">
                         <label>CEP:</label>
-                        <input type="text" class="form-control" placeholder="CEP">
+                        <input type="text" name="cep" class="form-control" placeholder="CEP">
                       </div>
                     </div>
                     <div class="col-md-6 pr-1">
                       <div class="form-group">
                         <label>Cidade:</label>
-                        <input type="text" class="form-control" placeholder="Cidade">
+                        <input type="text" name="cidade" class="form-control" placeholder="Cidade">
                       </div>
                     </div>
                   </div>
@@ -175,13 +175,13 @@
                     <div class="col-md-4 pr-1">
                       <div class="form-group">
                         <label>Estado</label>
-                        <input type="text" class="form-control" placeholder="Estado" >
+                        <input type="text" name="estado" class="form-control" placeholder="Estado" >
                       </div>
                     </div>
                     <div class="col-md-4 px-1">
                       <div class="form-group">
                         <label>Telefone</label>
-                        <input type="text" class="form-control" placeholder="Telefone" >
+                        <input type="text" name="telefone" class="form-control" placeholder="Telefone" >
                       </div>
                     </div>
                    
@@ -190,7 +190,7 @@
                       <div class="col-md-5 pr-1">
                           <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" placeholder="Email">
+                            <input type="email" name="email" class="form-control" placeholder="Email">
                           </div>
                         </div>
                    
