--- a/noc/public/site/map.html
+++ b/noc/public/site/map.html
@@ -69,7 +69,7 @@
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="./notifications.html">
+                        <a class="nav-link" href="../index.html">
                             <i class="material-icons">power_settings_new</i>
                             <p>Sair</p>
                         </a>
